style.css
@import url('https://fonts.googleapis.com/css2?family=Electrolize&display=swap');

* {
    font-family: 'Electrolize', sans-serif;
}

body {
    background-color: darkslategrey;
}

.container {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
}

.calculator {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-template-rows: minmax(120px, auto) repeat(5, 1fr);
}

.display {
    grid-column: 1 / -1;
    display: flex;
    justify-content: space-around;
    align-items: flex-end;
    flex-direction: column;
    word-wrap: break-word;
    word-break: break-all;
    font-weight: 500;
    background-color: #222;
    padding: 8px;
    margin-bottom: 8px;
    border-radius: 6px;
    border: 1px solid slategrey;
}

.display .previous-operand {
    color: darkgrey;
    font-size: 1.5rem;
}

.display .current-operand {
    color: white;
    font-size: 2rem;
}

button {
    cursor: pointer;
    padding: 10px;
    outline: none;
    border: 1px solid grey;
    font-weight: bold;
    font-size: 2rem;
}

button:hover {
    background-color: #999999;
}

